--- a/romsem.tj/css/style.css
+++ b/romsem.tj/css/style.css
@@ -273,6 +273,11 @@ body {
    border-radius: 5px;
 }
 
+.cart .cart-wrapper .product {
+   border-top: 1px solid #a4acad;
+   padding: 10px 0 5px 0;
+}
+
 .otziv {
    width: 55%;
    margin: 0 0 0 20%;
